<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile"/>

        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard"/>

        <item android:id="@+id/nav_expenses"
            android:icon="@drawable/expenses"
            android:title="@string/expenses"
            />

  <item android:id="@+id/nav_loans"
            android:icon="@drawable/loans"
            android:title="@string/loans"
            />



        <item android:id="@+id/nav_drafts"
            android:icon="@drawable/drafts"
            android:title="@string/drafts"/>


        <item android:id="@+id/nav_editIncome"
            android:icon="@drawable/settings"
            android:title="@string/edit_income"/>

        <item android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>

    </group>

</menu>
