<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background">


    <ImageView
        android:id="@+id/Start_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/Start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_your_budget_recorded_with_us"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#B90945"
        android:textStyle="italic"
        android:textSize="15sp"
        />
    <Button

        android:id="@+id/Start_LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:padding="@dimen/activity_horizontal_margin"
        />
    <Button
        android:id="@+id/Start_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/register_new_account"
        android:background="@drawable/custom_whitebutton"
        android:textColor="#E91E63"
        android:padding="@dimen/activity_horizontal_margin"
        />
</LinearLayout>