<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient_background">

    <TextView

        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:id="@+id/login_img"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_text"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_text2"
        android:layout_alignStart="@id/login_email"
        android:layout_below="@id/login_img"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:paddingTop="10dp" />

    <EditText
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text2"
        android:layout_centerHorizontal="true"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_edittext"
        android:padding="5dp"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_text3"
        android:layout_below="@id/login_email"
        android:text="@string/password"
        android:layout_alignStart="@id/login_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:paddingTop="10dp"
        />
    <EditText
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text3"
        android:hint="@string/passwordHint"
        android:layout_alignStart="@id/login_email"
        android:inputType="textPassword"
        android:background="@drawable/custom_edittext"
        android:padding="5dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/login_password"
        android:background="@drawable/custom_button"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:padding="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/LogInToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/no_account_yet_register_now"
        android:background="@drawable/custom_whitebutton"
        android:textColor="#E91E63"
        />

</RelativeLayout>