<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity"
    android:background="@drawable/gradient_background"
    >

    <TextView
        android:id="@+id/addexpense_text1"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/addexpense_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        app:layout_constraintLeft_toRightOf="@id/addexpense_text1"
        app:layout_constraintTop_toTopOf="@id/addexpense_text1"
        android:layout_marginStart="60dp"
        android:background="@drawable/custom_edittext"
        android:textAlignment="center"
        android:autofillHints="Title"
        android:inputType="textPhonetic"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/addexpense_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addexpense_text1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:text="@string/amount"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"

        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        android:id="@+id/addexpense_amount"
        app:layout_constraintLeft_toRightOf="@id/addexpense_text1"
        app:layout_constraintTop_toBottomOf="@id/addexpense_title"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/custom_edittext"
        android:textAlignment="center"
        android:autofillHints=""
        android:inputType="number"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/addexpense_text3"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addexpense_text2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"

        />
    <EditText
        android:id="@+id/addexpense_desc"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="@id/addexpense_text3"
        app:layout_constraintTop_toBottomOf="@id/addexpense_text3"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edittext"
        android:autofillHints=""
        android:inputType="textPhonetic"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/addexpense_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/addexpense_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/addexpense_date"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:textSize="20sp"
        android:padding="5dp"
        app:layout_constraintLeft_toRightOf="@id/addexpense_text1"
        app:layout_constraintTop_toBottomOf="@id/addexpense_desc"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:inputType="date"
        android:textAlignment="center"
        android:hint="@string/yyyy_mm_dd"
        android:background="@drawable/custom_edittext"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/addexpense_datepick"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/addexpense_date"
        app:layout_constraintTop_toTopOf="@id/addexpense_date"
        android:src="@drawable/ic_date_range"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/addexpense_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/addexpense_text4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/status"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <Spinner
        android:id="@+id/addexpense_spinner1"
        android:layout_width="140dp"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/addexpense_date"
        app:layout_constraintLeft_toRightOf="@id/addexpense_text1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_height="30dp"
        android:background="@drawable/custom_edittext"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/addexpense_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:text="@string/save_as_draft"
        android:layout_marginBottom="70dp"
        android:background="@drawable/custom_whitebutton"
        android:textColor="#E91E63"
        android:padding="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/addexpense_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/custom_button"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/add_expense"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toEndOf="@+id/addexpense_save" />


    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>